# esiosapy

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  release.config.cjs
.github/workflows/: release.yml  test.yml
esiosapy/: __main__.py  client.py
esiosapy/managers/: archive_manager.py  indicator_manager.py  offer_indicator_manager.py
esiosapy/models/archive/: archive.py  archive_date_type.py  archive_download.py  taxonomy_term.py  vocabulary.py
esiosapy/models/indicator/: geo_agg.py  geo_trunc.py  indicator.py  time_agg.py  time_trunc.py
esiosapy/models/offer_indicator/: offer_indicator.py
esiosapy/utils/: request_helper.py  zip_utils.py
tests/: test_client.py
tests/utils/: test_request_helper.py
