[tool.poetry]
name = "esiosapy"
version = "0.1.0"
description = "Unofficial ESIOS API Python library. Up to date and fully equipped."
authors = ["M4RC0Sx"]
license = "MIT License"
readme = "README.md"
packages = [
    { include = "esiosapy" },
]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
