[tool.poetry]
name = "esiosapy"
version = "1.0.1"
description = "Unofficial ESIOS API Python library. Up to date and fully equipped."
authors = ["M4RC0Sx"]
license = "GPL-3.0 License "
readme = "README.md"
packages = [
    { include = "esiosapy" },
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
pydantic = "^2.5.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.12"
mypy = "^1.8.0"
types-requests = "^2.31.0.20240106"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
plugins = [
  "pydantic.mypy"
]

warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

# for strict mypy
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
testpaths = ["tests"]